# oceanbench

./: .gitignore  README.md  install_all.sh  pyproject.toml
configs/: base.yaml
configs/agents/: agent_stub.yaml
configs/models/: sogp_paper.yaml  svgp_gpytorch.yaml
configs/policies/: adapp.yaml  grg.yaml  mi_dp.yaml  mi_greedy.yaml  pomcp.yaml  random_walk.yaml
configs/routing/: tsp.yaml
configs/scenarios/: adapp_region.yaml  binney_region.yaml  dlp_region.yaml  pomcp_region.yaml  test_region.yaml
configs/sweeps/: adapp_time_budget.yaml  (+5 more)
docs/: architecture.md  field_models.md  policies.md  tasks.md
examples/: __init__.py  adaptive_sampling_pomcp_demo.py  binney2013_offline.py  binney2013_receding_horizon.py  compare_4_methods_travel_budget.py  compare_field_models.py  dlp_sampling_dynamic.py  dlp_sampling_static.py  inspect_subset.py  run_adapp.py  visualize_predictions.py
notebooks/: 01_binney2013_full.ipynb  02_paper_dlp_environmental_sampling.ipynb  04_adaptive_sampling_pomcp_control_panel.ipynb  05_adapp_control_panel.ipynb  compare_field_models.ipynb  field_model_overview.ipynb  provider_subset_field_model_benchmark.ipynb  single_model_demo.ipynb
oceanbench-agents/: pyproject.toml
oceanbench-bench/: pyproject.toml
oceanbench-bench/oceanbench_bench/: __init__.py  adapp_runner.py  cli.py  compare_travel_budget.py  eval.py  logging.py  results.py  runner.py  runner_multi.py
oceanbench-core/: pyproject.toml
oceanbench-data-provider/: LICENSE  README.md  pyproject.toml
oceanbench-data-provider/docs/: configuration.md  dataset_cards.md  sanitization.md
oceanbench-data-provider/notebooks/: README.md  complete_workflow.ipynb
oceanbench-data-provider/oceanbench_data_provider/: __init__.py  catalog.py  cli.py  provider.py  thermo.py
oceanbench-data-provider/oceanbench_data_provider/cache/: __init__.py  keys.py  store.py
oceanbench-data-provider/oceanbench_data_provider/sanitize/: __init__.py  pipeline.py  qc.py  regrid.py  units.py
oceanbench-data-provider/oceanbench_data_provider/scenarios/: __init__.py  regions.py  registry.py
oceanbench-data-provider/oceanbench_data_provider/sources/: __init__.py  base.py  copernicus_bgc.py  copernicus_phy.py  factory.py  hycom.py
oceanbench-data-provider/oceanbench_data_provider/viz/: __init__.py  colormaps.py  movie.py  quicklook.py
oceanbench-data-provider/tests/: __init__.py  test_cache_keys.py  test_catalog.py  test_provider.py  test_sanitize.py
oceanbench-env/: pyproject.toml
oceanbench-env/oceanbench_env/: __init__.py  collision.py  dynamicsim.py  env.py  sensorsim.py  targets.py  truth.py
oceanbench-models/: pyproject.toml
oceanbench-models/oceanbench_models/: __init__.py
oceanbench-models/oceanbench_models/belief/: __init__.py
oceanbench-models/oceanbench_models/belief/field/: __init__.py  base.py  covariance_backends.py  empirical_cov.py  gmrf.py  gp.py  hyperparams.py  kernel_st.py  local_linear.py  noise.py  pseudo_input_gp.py  sogp_paper.py  sparse_online_gp.py  spgp_fitc.py  stgp.py  svgp_gpytorch.py  utils.py
oceanbench-policies/: pyproject.toml
oceanbench-tasks/: pyproject.toml
oceanbench-viz/: pyproject.toml
scripts/: run_compare_field_models.py  verify_pomcp_against_upstream.py
tests/: conftest.py  test_adapp_decomposition.py  test_adapp_end_to_end.py  test_adapp_policy.py  test_binney_pipeline.py  test_core_types.py  test_covariance_empirical.py  test_covariance_kernel.py  test_dlp_pipeline.py  test_field_model_interface.py  test_gmrf.py  test_gp.py  test_graph.py  test_grg.py  test_local_linear.py  test_mi_dp_planner.py  test_mi_objective.py  test_objectives.py  test_pomcp_adapter.py  test_pomcp_commitment.py  test_pomcp_end_to_end.py  test_pomcp_exploration.py  test_pseudo_input_gp.py  test_sampling_h.py  test_sogp_paper.py  test_sparse_online_gp.py  test_spgp_fitc.py  test_stgp.py  test_svgp_gpytorch.py  test_truth_query.py  test_tsp_routing.py
(+57 files in other folders)
