[project]
name = "oceanbench"
version = "0.1.0"
description = "Modular benchmark for ocean field representation and IPP."
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["oceanbench-core", "oceanbench-env", "oceanbench-models", "oceanbench-tasks", "oceanbench-bench"]
