[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanbench-data-provider"
version = "0.1.0"
description = "General-purpose ocean data provider for HYCOM and Copernicus Marine Service"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "OceanBench Team" }
]
keywords = ["ocean", "data", "HYCOM", "Copernicus", "IPP", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21",
    "xarray>=2023.1",
    "dask>=2023.1",
    "netCDF4>=1.6",
    "zarr>=2.14",
    "pandas>=1.5",
    "pyyaml>=6.0",
    "copernicusmarine>=2.0",
    "requests>=2.28",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "cartopy>=0.22",
    "shapely>=2.0",
    "geopandas>=0.12",
    "plotly>=5.0",
    "cmocean>=2.0",
    "gsw>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]
regrid = [
    "xesmf>=0.8",
]
movie = [
    "imageio>=2.31",
]
notebooks = [
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[project.scripts]
oceanbench = "oceanbench_data_provider.cli:main"

[project.urls]
Homepage = "https://github.com/oceanbench/oceanbench"
Documentation = "https://github.com/oceanbench/oceanbench#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["oceanbench_data_provider*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
