[project]
name = "oceanbench-models"
version = "0.1.0"
description = "Model implementations for the OceanBench benchmark."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "xarray",
  "scipy",
  "scikit-learn>=1.4,<2.0",
  "torch>=2.0,<3.0",
  "gpytorch>=1.14,<2.0",
  "oceanbench-core",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

